# dnd-charactersheet-webapp

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/src/dnd_backend/: __init__.py  import_data.py  main.py  router.py  run.py
backend/src/dnd_backend/config/: database.py
backend/src/dnd_backend/imports/: actions.py  actions_import.py  backgrounds.py  backgrounds_import.py  baseitems_import.py  bestiary_import.py  conditions.py  conditions_import.py  feats.py  feats_import.py  item_group_import.py  item_masteries_import.py  item_properties_import.py  items_import.py  languages_import.py  optionalfeatures.py  optionalfeatures_import.py  races.py  races_import.py  senses.py  senses_import.py  skills.py  skills_import.py  spells_import.py  status_import.py  variants.py  variants_import.py
backend/src/dnd_backend/models/: action_model.py  background_model.py  baseitem_model.py  bestiary_model.py  character_model.py  condition_model.py  feat_model.py  item_group_model.py  item_masteries_model.py  item_model.py  item_properties_model.py  language_model.py  optionalfeature_model.py  race_model.py  sense_model.py  skill_model.py  spell_model.py  status_model.py  variant_model.py
backend/src/dnd_backend/routers/: actions_router.py  backgrounds_router.py  baseitems_router.py  bestiary_router.py  characters_router.py  conditions.py  conditions_router.py  feats.py  feats_router.py  item_group_router.py  item_masteries_router.py  item_properties_router.py  items_router.py  language_router.py  (+12 more)
(+65 files in other folders)
