[tool.poetry]
name = "dnd-backend"
version = "0.1.0"
description = "Backend service for D&D Character Sheet Application"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "dnd_backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
motor = "^3.3.2"  # AsyncIO MongoDB driver
pymongo = "^4.6.1"  # Compatible with MongoDB 8.0.x

[tool.poetry.scripts]
dev = "dnd_backend.main:main"
import = "dnd_backend.import_data:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
